internal/fixtures/architecture/negative/python-layer-relative/apps/api/src/deepwork_api/ports/bad.py
from ..application.work import VALUE

FORBIDDEN = VALUE
